# zfp

./: .travis.yml  CMakeLists.txt  appveyor.sh  appveyor.yml
array/: zfparray.h  zfparray1.h  zfparray2.h  zfparray3.h  zfputils.h
array/zfp/: exception.h  memory.h
docs/source/: arrays.rst  exceptions.inc  header.inc
examples/: CMakeLists.txt
include/: zfp.h
src/: zfp.c
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/array/: CMakeLists.txt  testArray1d.cpp  testArray1f.cpp  testArray2d.cpp  testArray2f.cpp  testArray3d.cpp  testArray3f.cpp  testArrayBase.cpp
utils/: zfp.c
